<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="CrashReportEmailTo" translatable="false">thomasfr2024@outlook.com</string>

    <string name="CrashReport_MailBody" translatable="false">Hello, Sorry found crash</string>
    <string name="CrashReport_MailSubject" translatable="false">Crashreport from </string>

    <string name="add">add</string>

    <string name="again">again</string>

    <string name="app_name">Bible learn</string>

    <string name="change">change</string>

    <string name="clear">Clear</string>

    <string name="current_file">current file</string>

    <string name="delete">delete</string>

    <string name="down">down</string>

    <string name="edit">Edit</string>

    <string name="exit">exit</string>

    <string name="letters">Letters..</string>

    <string name="load_original">load original</string>

    <string name="nextData" translatable="false"><![CDATA[>]]></string>

    <string name="no">No</string>

    <string name="open">Open</string>

    <string name="opt">Opt</string>

    <string name="prevData" translatable="false"><![CDATA[<]]></string>

    <string name="recite">recite</string>

    <string name="replace">Replace</string>

    <string name="s">Speak</string>

    <string name="search">Search</string>

    <string name="send_me_email">Choose mailer</string>

    <string name="show_text">show Text</string>

    <string name="speak">speak</string>

    <string name="start">Start</string>

    <string name="stop">Stop</string>

    <string name="translation">Translation</string>

    <string name="up">up</string>
    <string name="welcome">Welcome</string>
    <string name="introduction">Introduction</string>
    <string name="thank_you">Thank you</string>

    <string name="vers">Vers</string>

    <string name="word_click">click word</string>
    <string name="word_mix">word mix</string>

    <string name="words">words</string>

    <string name="yes">Yes</string>
    <string name="word_clicklz">"word click"</string>
    <string name="spruch_csv">sayings.csv</string>
    <string name="save_as">Save as</string>
    <string name="import_from_downloads" translatable="false">import from downloads</string>
    <string name="overwrite">"Overwrite: "</string>
    <string name="set" >set</string>
    <string name="lernvers">to learn:</string>
    <string name="add_to_your_bibleverses">Add to your Bibleverses?</string>
    <string name="copy_to_app_file_dir">"Copy to app file dir? "</string>
    <string name="question_mark" translatable="false">  \? </string>
    <string name="returni">Return</string>
    <string name="please_enter_some_text">Please enter some text</string>
    <string name="check_it">check it</string>
    <string name="tap_me">tap me to record using keybord</string>
    <string name="themes">Themes</string>
    <string name="getvers">getVers</string>
    <string name="random_vers">random Vers</string>
    <string name="title_activity_settings_rand">SettingsRand</string>

    <!-- Preference Titles -->
    <string name="preference_listPreference_bible_version_title">Select Bible Version</string>
    <string name="preference_listPreference_bible_version_default_value" translatable="false">NLT</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="bible">Bible</string>
    <string name="wait">wait</string>
    <string name="Title_entdecke">Discover</string>
    <string name="Title_speech">Speech</string>
    <string name="title_words">Words</string>
    <string name="Title_clickw">ClickWord</string>
    <string name="Title_home">Home</string>
    <string name="Title_letters">Letters</string>
    <string name="title_edit">Edit</string>
    <string name="new_vers">new vers</string>
    <string name="verslist">Word search list</string>
    <string name="discover">discover</string>
    <string name="title_activity_ay_welcome">Welcome</string>
    <string name="no_text_to_speak">no text to speak</string>
    <string name="current_list">current List</string>
    <string name="build_list">build List</string>
    <string name="show_verses">show verses</string>
    <string name="as_mixed">as mixed</string>
    <string name="text_size">Text size</string>

    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="grey">Grey</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="ocher">Ocher</string>
    <string name="okay_verry_nice">excellently</string>
    <string name="seek_rand">word list</string>
    <string name="to_learn">to global vers</string>
    <string name="add_cur_vers" translatable="false">add cur vers</string>
    <string name="show_next">show next</string>
    <string name="wrong_words">wrong words</string>
    <string name="allow_partword">allow partword</string>
    <string name="record_language">record language</string>
    <string name="online_bibel_version_ausw_hlen">choose online bible version</string>
    <string name="bad">houps</string>
    <string name="okay_nice">okay nice</string>
    <string name="nice">nice</string>
    <string name="default_light_theme" translatable="false">Light</string>
    <string name="default_night_theme" translatable="false">Night</string>
    <string name="allow_part_reco" translatable="false">use part recognition</string>
    <string name="do_speak_now">Do speak now !!</string>
    <string name="go_on_after">go on after</string>
    <string name="check_next">check next</string>
    <string name="speech_commands">Speech Commands</string>
    <string name="next_word">next word</string>
    <string name="speak_and">+ speak</string>
    <string name="retry_word">retry</string>
    <string name="keep_screen_on">keep screen on</string>
    <string name="shuffle">shuffle</string>
    <string name="difficulty">difficulty</string>
    <string name="manage">manage..</string>
    <string name="supi_all_words_right_spoken">supi, ALL words right spoken!!</string>
    <string name="chapter">Chapter</string>
    <string name="selectedi">selected</string>
    <string name="search_one_or_more_words">search one or more words</string>
    <string name="match_case">match case</string>
    <string name="record_stopped">record stopped</string>
    <string name="start_new_when">start new when</string>
    <string name="error_words">errors</string>
    <string name="restart_when_wrong_clicked">restart when wrong clicked</string>
    <string name="vers_of_the_day">vers of the day</string>
    <string name="as_book">as Book</string>
    <string name="chapter_change">Chapter change</string>
    <string name="speak_options">Speak Options</string>
    <string name="pause_after_biblevers">Pause after biblevers</string>
    <string name="seconds">Seconds</string>
    <string name="repeat_bibleverses">Repeat Bibleverses</string>
    <string name="Title_speech2">recite</string>
    <string name="clear_all_fields">Clear all fields</string>
    <string name="further_word">further</string>
    <string name="speak_word">speak</string>
    <string name="search_list_of_verses">in list of verses</string>
    <string name="list_search_whole_bible">List-search whole Bible ..</string>
    <string name="select_random_range">Select Random Range</string>
    <string name="one_book_only">one book only</string>
    <string name="book_name_short">Book Name (short)</string>
    <string name="select_search_range">Select Search Range</string>
    <string name="match_whole_word">match whole word</string>
    <string name="app_range">App range</string>
    <string name="base">Simple</string>
    <string name="more">More</string>
    <string name="all">All</string>
    <string name="global">Global</string>
    <string name="vers_history">Vers History</string>
    <string name="joh_3_16">Joh 3:16</string>
    <string name="show_send_last_error">show / send last ERROR</string>
    <string name="add_info">Add info</string>
    <string name="plus">+</string>
    <string name="current">Current</string>
    <string name="name">Name</string>
    <string name="label">Label</string>

</resources>
