<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#3E80B4"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/online_bibel_version_ausw_hlen"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>


        <ListView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_margin="5dp"
            android:id="@+id/lVersionList"
            android:divider="#001EFF"
            android:dividerHeight="2dp"
            android:orientation="horizontal"> <!--match_parent Vertical Orientation set -->

        </ListView>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:textSize="11sp"
        />

    <!--   neue Zeile  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal"
        android:visibility="invisible">


        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/no"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:textSize="11sp" />

    </LinearLayout>

</LinearLayout>
